[MIX] - [Fixed TextureSample node overflowing; Added tooltip to selector; fixed color on color picker (node input)]

--- a/styles/Node.module.css
+++ b/styles/Node.module.css
@@ -76,7 +76,9 @@
 .column {
   width: 100%;
   height: 100%;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   overflow: visible;
   align-content: flex-start;
 }
